<resources>
    <string name="app_name">ChatUdp</string>
    <string name="what_s_your_alias">What\'s your alias?</string>
    <string name="next">Next</string>
    <string name="local_network_connection_title">Connect Remote Device via LocalNetwork</string>
    <string name="local_network_connection_description">If two devices in the same local network, you can use this way create connection. \n Use QR code scan or UDP broadcast.</string>
    <string name="broadcast_connection_local_device">Local Device: %s</string>
    <string name="broadcast_connection_local_ip_address">Local IP Address: %s</string>
    <string name="broadcast_connection_use_system_broadcast">Use System Broadcast: </string>
    <string name="local_network_scan_qr_code">Scan QR Code</string>
    <string name="local_network_show_qr_code">Show QR Code</string>
    <string name="local_network_local_address">Local Addresses: </string>

</resources>