<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/dp_20">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/tvDescription1"
            android:text="@string/local_network_connection_title"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvDescription1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvDescription2"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/local_network_connection_description"
            android:textSize="14sp"
            android:textColor="@color/gray_626265"/>

        <TextView
            android:id="@+id/tvDescription2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDescription1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scan_qr_code_layout"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/gray_626265"
            android:text="@string/local_network_local_address" />



        <FrameLayout
            android:id="@+id/scan_qr_code_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintBottom_toTopOf="@id/show_qr_code_layout"
            app:layout_constraintTop_toBottomOf="@id/tvDescription2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_line_button_color_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/local_network_scan_qr_code"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/show_qr_code_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@id/scan_qr_code_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_marginTop="15dp"
            android:background="@drawable/common_line_button_color_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/local_network_show_qr_code"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>